MiniKube/cv-en-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-en-service
spec:
  selector:
    app: cv-en
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
