MiniKube/cv-en-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-en-ingress
spec:
  rules:
    - host: cv-en.local
      http:
        paths:
          - path: /cv_en.pdf
            pathType: Prefix
            backend:
              service:
                name: cv-en-service
                port:
                  number: 80
